2006-05-05  Aaron Bockover  <aaron@abock.org>

	* docs/en/*: Updated docs (including contributions from rubenv)

2006-05-04  Aaron Bockover  <aaron@abock.org>

	* configure.ac: Set version to 0.11.0-cvs to set apart from the
	0.10.x series

	* banshee.pc.in: Added pluginapi variable to define the second 
	API revision for the 0.11.x series (new API has been introduced since
	0.10.x and some plugins may not be backwards compatible)

2006-05-04  Aaron Bockover  <aaron@abock.org>

	* src/AboutBox.cs: Added missing comma / fix broken build

2006-05-04  Jakub Friedl  <jfriedl@suse.cz>

	* src/AboutBox.cs: Added Jakub Friedl to Translator Credits (Czech)

2006-05-03  Aaron Bockover  <aaron@abock.org>

	* src/Banshee.MediaEngine/Vlc/VlcPlayerEngine.cs: 
	fix build error for VLC engine (BGO #340496) 

2006-05-02  Aaron Bockover  <aaron@abock.org>

	* entagged-sharp/Ogg/OggFileReader.cs: Added application/x-vorbis+ogg
	and application/x-vorbis+ogg as a SupportedMimeType (BNC #169616)

2006-05-01  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Banshee.Base/LibraryTrackInfo.cs: Call TrackInfo's OnChanged when
	saving changes to a Track.

	* src/Banshee.Base/TrackInfo.cs: Add event and protected virtual method
	OnChanged for when a track is changed.

	* src/Banshee.Base/Sources/PlaylistSource.cs: Add Id property, and
	public ClearTracks and ContainsTrack methods.

2006-05-01  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Banshee.Base/Dap/DapCore.cs: Fix small bugs that caused iPods to
	sometimes show up as mass storage devices (BGO #340313).

2006-05-01  Aaron Bockover  <aaron@abock.org>

	Fix a locking bug that caused crashes (BGO #340306)

	* src/Banshee.Base/Source.cs: Added virtual TracksMutex object that
	can be used to properly lock the Tracks collection

	* src/PlayerInterface.cs:
	* src/PlaylistModel.cs: lock SourceManager.ActiveSource.TracksMutex
	when performing operations on SourceManager.ActiveSource.Tracks
	
	* src/Banshee.Base/Sources/LibrarySource.cs: